<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupbutton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="auto"
    android:orientation="vertical"
    tools:context=".activity.MainActivityFrontPage">

...

    <Space
        android:layout_width="match_parent"
        android:layout_height="189dp" />

    <Button
        android:id="@+id/gotosignupbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:text="Signup" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:text="Login" />

</LinearLayout>
