...
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
        <EditText

            android:editable="false"
        android:id="@+id/city22"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30dp"
        android:text=""


...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:inputType="text"
            android:minHeight="48dp"

            android:text="Weather"

            android:textSize="25dp"
            android:textStyle="bold"/>


        <TextView
...
